# proof-swarm

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ataegina.config.sh  baseline.py  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: lean-oracle-spec.md
formal/: ProofSwarm.lean  lake-manifest.json  lakefile.toml
formal/ProofSwarm/: Parity.lean
problems/: problems.json
proofswarm/: config.py  lean_oracle.py  orchestrator.py
scripts/: oracle_verify.py
src/: config.py  llm.py  orchestrator.py  scoring.py
tests/: test_lean_oracle.py  test_llm.py  test_logic.py  test_orchestrator.py
