[project]
name = "proof-swarm"
version = "0.1.0"
description = "Make several small local LLMs derive and check simple math proofs, each in a different role."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
