[project]
name = "proof-swarm"
version = "0.1.0"
description = "Make several small local LLMs derive and check simple math proofs, each in a different role."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mutmut>=3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["proofswarm"]

[tool.coverage.report]
# Offline logic must stay fully covered; genuine model/subprocess seams are
# marked `# pragma: no cover` at the use site with a reason.
exclude_also = ["pragma: no cover", "if __name__ == .__main__.:"]
show_missing = true
fail_under = 100

[tool.mutmut]
source_paths = ["proofswarm/"]
pytest_add_cli_args_test_selection = ["tests/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proofswarm"]
